WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86695
Fix rounding in RenderFlowThread::paintIntoRegion
https://bugs.webkit.org/show_bug.cgi?id=86695
Summary
Fix rounding in RenderFlowThread::paintIntoRegion
Emil A Eklund
Reported
2012-05-16 18:40:23 PDT
Fix rounding of offset in paintIntoRegion.
Attachments
Patch
(3.11 KB, patch)
2012-05-16 18:47 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2012-05-16 18:47:01 PDT
Created
attachment 142391
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-05-16 18:54:16 PDT
Comment on
attachment 142391
[details]
Patch OK.
WebKit Review Bot
Comment 3
2012-05-17 12:04:14 PDT
Comment on
attachment 142391
[details]
Patch Clearing flags on attachment: 142391 Committed
r117476
: <
http://trac.webkit.org/changeset/117476
>
WebKit Review Bot
Comment 4
2012-05-17 12:04:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug