Fix rounding in RenderFlowThread::paintIntoRegion https://bugs.webkit.org/show_bug.cgi?id=86695

Reviewed by Eric Seidel.

Fix rounding of offset in paintIntoRegion to ensure that we paint on
device pixel boundaries.

Covered by existing tests in fast/regions.

* platform/graphics/FractionalLayoutPoint.h:
(WebCore::roundedIntPoint):
Add roundedIntPoint(FractionalLayoutSize) function.
(WebCore):
* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::paintIntoRegion):


Canonical link: https://commits.webkit.org/104383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117476 268f45cc-cd09-0410-ab3c-d52691b4dbfc