Source/WebCore/platform/graphics/FractionalLayoutPoint.h
@@ -167,6 +167,11 @@ inline IntPoint roundedIntPoint(const FractionalLayoutPoint& point)
     return IntPoint(point.x().round(), point.y().round());
 }
 
+inline IntPoint roundedIntPoint(const FractionalLayoutSize& size)
+{
+    return IntPoint(size.width().round(), size.height().round());
+}
+
 inline IntPoint ceiledIntPoint(const FractionalLayoutPoint& point)
 {
     return IntPoint(point.x().ceil(), point.y().ceil());
